--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 		"test": "vsce --help",
 		"package": "vsce package",
 		"publish": "vsce publish"
-	},	
-	"devDependencies": {
+	},
+	"dependencies": {
 		"vsce": "^2.6.3"
 	},
 	"engines": {
