vscode: update extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
 		"wakatime.vscode-wakatime",
 		"codeium.codeium",
 		"github.vscode-github-actions",
-		"redhat.vscode-yaml"
+		"redhat.vscode-yaml",
+		"njzy.stats-bar"
 	]
 }
